# discogs-cache

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  rebuild-cache.yml  sync-library.yml
alembic/versions/: 0001_initial.py
docs/: discogs-cache-technical-overview.md  migrations-runbook.md  plan-multi-artist-splitting.md
hooks/: pre-commit
lib/: artist_splitting.py  catalog_source.py  db_introspect.py  format_normalization.py  matching.py  observability.py  pipeline_state.py  wxyc.py
migrations/: 01_optimize_schema.sql  02_enrich_data.sql
schema/: create_database.sql  create_functions.sql  create_indexes.sql  create_track_indexes.sql
scripts/: csv_to_tsv.py  dedup_releases.py  enrich_library_artists.py  export_to_sqlite.py  extract_library_labels.py  filter_csv.py  fix_csv_newlines.py  genre_analysis.py  import_csv.py  import_csv.sh  resolve_collisions.py  run_pipeline.py  sync-library.sh  tsv_to_sqlite.py  verify_cache.py
tests/: conftest.py
tests/e2e/: test_discogs_pipeline_e2e.py  test_entity_resolution_e2e.py  test_pipeline.py  test_rust_fuzzy_e2e.py
tests/fixtures/: create_fixtures.py  library.db  library_artists.txt
tests/integration/: test_alembic_baseline.py  test_alembic_lookup_negative.py  test_connection_resilience.py  test_copy_to_target.py  test_db_introspect.py  test_dedup.py  test_enrich_library_artists.py  test_error_resilience.py  test_import.py  test_prune.py  test_schema.py  test_state_resume_old_format.py  test_tsv_to_sqlite.py  test_verify_cache.py
(+28 files in other folders)
